[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/GameOver.gd" type="Script" id=1]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 2736.0
margin_bottom = 1379.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 748.0
margin_top = 383.0
margin_right = 851.0
margin_bottom = 516.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 103.0
margin_bottom = 43.0
text = "Game Over
"
align = 1

[node name="Retry" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 103.0
margin_bottom = 73.0
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Title")
focus_next = NodePath("../Title")
focus_previous = NodePath("../Quit")
text = "Retry"

[node name="Title" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 77.0
margin_right = 103.0
margin_bottom = 103.0
focus_neighbour_top = NodePath("../Retry")
focus_neighbour_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Retry")
text = "Main Menu"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 103.0
margin_bottom = 133.0
focus_neighbour_top = NodePath("../Title")
focus_neighbour_bottom = NodePath("../Retry")
focus_next = NodePath("../Retry")
focus_previous = NodePath("../Title")
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Title" to="." method="_on_Title_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
